2022-01-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSOperation.m:
	Declare private method to avoid compiler warnings.

2022-01-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSString.h:
	* Source/Additions/GSMime.m:
	* Source/Additions/Unicode.m:
	* Resources/English.lproj/Localizable.strings:
	* Resources/Esperanto.lproj/Localizable.strings:
	* Resources/French.lproj/Localizable.strings:
	* Resources/German.lproj/Localizable.strings:
	* Resources/Italian.lproj/Localizable.strings:
	* Resources/Japanese.lproj/Localizable.strings:
	* Resources/Korean.lproj/Localizable.strings:
	* Resources/Polish.lproj/Localizable.strings:
	* Resources/SimplifiedChinese.lproj/Localizable.strings:
	* Resources/Spanish.lproj/Localizable.strings:
	* Resources/TraditionalChinese.lproj/Localizable.strings:
	Reinstate lost encoding constants (so that software using the
	gnustep extenstions should work again).  Also tidy some indentation
	issues.

2021-12-21 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSOperation.m: fix handling of concurrent NSOperations
	if isFinished KVO is triggered without the operation being finished,
	and call completion block for concurrent operations. Also fixes
	removing dependency observers more than once.

2021-12-14 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSBundle.m:
	Default to UTF-8 when reading localized string files without BOM.

2021-12-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m: (-disconnect:) try once if we are closing the TCP
	connection, for up to 10 seconds if trying to keep it available.
	* Source/NSFileHandle.m: (-sslDisconnect) operate in non-blocking
	mode so that network issues should not cause a disconnect attempt
	to hang. This should behave better on heavily loaded systems.

2021-11-23 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: check for zlib before bfd
	* configure: regenerate
	libbfd may need libz, so we must check for one before checking for
	the other.
